--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -1,6 +1,7 @@
 {
-  "appTitle": "flutter_application_1",
-  "@appTitle": {
-    "description": "The title of the application"
+  "@@locale": "en",
+  "helloWorld": "Hello World",
+  "@helloWorld": {
+    "description": "Hello world"
   }
 }
