WIP: install button

--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -37,5 +37,9 @@
   "addRating": "Add Rating",
   "contactSupport": "Contact Support",
   "noContactInfo": "No contact information available.",
-  "youMightLike": "You might also like"
+  "youMightLike": "You might also like",
+  "openDapp": "Open dApp",
+  "installing": "Installing...",
+  "download": "Download",
+  "update": "Update"
 }
