To Test: Install Button

--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -41,5 +41,6 @@
   "openDapp": "Open dApp",
   "installing": "Installing...",
   "download": "Download",
-  "update": "Update"
+  "update": "Update",
+  "apkFetchFail": "Failed to Fetch APK"
 }
