added category screen

--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -43,5 +43,7 @@
   "download": "Download",
   "update": "Update",
   "apkFetchFail": "Failed to Fetch APK",
-  "categories":"Categoreis"
+  "categories":"Categoreis",
+  "explore":"Explore",
+  "all":"All"
 }
