Done: App Button

--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -42,5 +42,7 @@
   "installing": "Installing...",
   "download": "Download",
   "update": "Update",
-  "apkFetchFail": "Failed to Fetch APK"
+  "apkFetchFail": "Failed to Fetch APK",
+  "open": "Open",
+  "save": "Save"
 }
