added relative themeing

--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -67,5 +67,7 @@
   "signingFailed": "Signing Failed.",
   "methodNotSupported": "Method not supported.",
   "chainNotSupported": "Chain not supported.",
-  "remove": "Remove"
+  "remove": "Remove",
+  "showMore": "Show more",
+  "showLess": "Show less"
 }
