added appbar with new UI

--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -45,7 +45,7 @@
   "apkFetchFail": "Failed to Fetch APK",
   "open": "Open",
   "save": "Save",
-  "categories": "Categoreis",
+  "categories": "Categories",
   "explore": "Explore",
   "all": "All",
   "signUpTo": "Sign up to HTC Store",
