--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -100,8 +100,10 @@
     }
   },
   "noDappsInstalled": "No dApps installed.",
-  "youWillReceivetwo":"You will receive two requests in wallet. One to connect wallet and another to sign a messsage, Signing is free and will not send a transaction.",
-  "confirmThatYouAreOwner":"Go back to wallet and Sign a message to confirm that you are the owner of this wallet.",
-  "connectUsignAnyWalletConnect":"Connect using any Wallet Connect supported wallet",
-  "goBackToWallet":"Go back to wallet to sign a message"
+  "youWillReceivetwo": "You will receive two requests in wallet. One to connect wallet and another to sign a messsage, Signing is free and will not send a transaction.",
+  "confirmThatYouAreOwner": "Go back to wallet and Sign a message to confirm that you are the owner of this wallet.",
+  "connectUsignAnyWalletConnect": "Connect using any Wallet Connect supported wallet",
+  "goBackToWallet": "Go back to wallet to sign a message",
+  "approveRequest": "Approve Request",
+  "approveRequestSubtitle": "Please open your wallet and sign the request after checking all the details."
 }
