--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -107,5 +107,12 @@
   "approveRequest": "Approve Request",
   "approveRequestSubtitle": "Please open your wallet and sign the request after checking all the details.",
   "ohno": "Oh no!",
-  "chainNotSupportedPopup": "Requested chain is not supported at the moment."
+  "chainNotSupportedPopup": "Requested chain is not supported at the moment.",
+  "youWillReceivetwo":"You will receive two requests in wallet. One to connect wallet and another to sign a messsage, Signing is free and will not send a transaction.",
+  "confirmThatYouAreOwner":"Go back to wallet and Sign a message to confirm that you are the owner of this wallet.",
+  "connectUsignAnyWalletConnect":"Connect using any Wallet Connect supported wallet",
+  "goBackToWallet":"Go back to wallet to sign a message",
+  "about":"About",
+  "helpAndFeedback":"Help and Feedback",
+  "logout":"Logout"
 }
