--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -116,5 +116,10 @@
   "tryAgain": "Please try again.",
   "about": "About",
   "helpAndFeedback": "Help and Feedback",
-  "logout": "Logout"
+  "logout": "Logout",
+  "oopsSomethingWentWrong": "Oups! Something went wrong!",
+  "notifiedEngineers": "We encountered an error and we've notified our engineering team about it. Sorry for the inconvenience caused.",
+  "goBack": "Go back",
+  "networkIssue": "Network Issue",
+  "checkNetwork": "Plese check your network"
 }
