updated category UI as per new theme

--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -9,7 +9,7 @@
   "createdByCommunity": "created by community.",
   "connectWallet": "Connect Wallet",
   "featuredDapps": "FEATURED DAPPS",
-  "exploreMore": "Explore More",
+  "exploreMore": "Explore more category and top dapps",
   "exploreByCategories": "EXPLORE BY CATEGORIES",
   "top": "TOP",
   "seeAll": "See all",
