added demo UI for rating card

--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -123,5 +123,7 @@
   "networkIssue": "Network Issue",
   "checkNetwork": "Plese check your network",
   "softUpdateText": "New update is availbale, download to get the latest features and fixes.",
-  "hardUpdateText": "New update is availbale, you need to update dApp store to continue using it"
+  "hardUpdateText": "New update is availbale, you need to update dApp store to continue using it",
+  "writeAboutTheApp":"Write about the dapp \n \nI feel the app is...",
+  "shareReview":"Share review"
 }
