--- a/lib/localization/app_pl.arb
+++ b/lib/localization/app_pl.arb
@@ -57,56 +57,56 @@
   "and": "i",
   "connectWith": "Połącz z",
   "firstName": "Imię",
-  "lastName":"nazwisko",
-"profile": "Profil",
-"wallets": "Portfele",
-"edit": "Edytuj",
-"addWallet": "Dodaj portfel",
-"settings": "Ustawienia",
-"privacyPolicy": "Polityka prywatności",
-"connectWithOthers": "Połącz z innymi",
-"sendingTxFail": "Błąd wysyłania",
-"signingFailed": "Błąd podpisywania",
-"methodNotSupported": "Metoda nieobsługiwana",
-"chainNotSupported": "Sieć nieobsługiwana",
-"remove": "Usuń",
-"showMore": "Pokaż więcej",
-"showLess": "Pokaż mniej",
-"welcomeToHTC": "Witaj w sklepie dApp HTC",
-"signMessage": "Podpisz wiadomość",
-"savedPwa": "Zapisane dApp",
-"noDappsSaved": "Brak zapisanych dApp",
-"dappsReadyToUpdate": "dApp gotowe do aktualizacji",
-"updateYourDapps": "Aby korzystać z najnowszych funkcji, zaktualizuj swoje dApp",
-"youHave": "Posiadasz",
-"webDapps": "dApp sieci Web",
-"manageDapps": "Zarządzaj dApp",
-"installedDapps": "Zainstalowane dApp",
-"pwas": "PWAs",
-"installedDappWithNumber": "Zainstalowane dApp ({number})",
-"@installedDappWithNumber": {
-"placeholders": {
-"number": {
-"type": "int"
-}
-}
-},
-"savedPwasWithNumber": "Zapisane PWA dApp ({number})",
-"@savedPwasWithNumber": {
-"placeholders": {
-"number": {
-"type": "int"
-}
-}
-},
-"noDappsInstalled": "Brak zainstalowanych dApp",
-"youWillReceivetwo": "Otrzymasz dwa żądania. Jeden dotyczy połączenia z portfelem, drugi dotyczy podpisania wiadomości. Podpisanie nie wiąże się z opłatami za transakcje.",
-"confirmThatYouAreOwner": "Powróć do portfela i podpisz wiadomość, aby potwierdzić, że jesteś właścicielem tego portfela",
-"connectUsignAnyWalletConnect": "Połącz dowolny portfel obsługujący Wallet Connect",
-"goBackToWallet": "Wróć do portfela i podpisz wiadomość",
-"approveRequest": "Zatwierdź żądanie",
-"approveRequestSubtitle": "Po sprawdzeniu treści żądania otwórz portfel i podpisz je",
-"ohno": "O nie!",
+  "lastName": "nazwisko",
+  "profile": "Profil",
+  "wallets": "Portfele",
+  "edit": "Edytuj",
+  "addWallet": "Dodaj portfel",
+  "settings": "Ustawienia",
+  "privacyPolicy": "Polityka prywatności",
+  "connectWithOthers": "Połącz z innymi",
+  "sendingTxFail": "Błąd wysyłania",
+  "signingFailed": "Błąd podpisywania",
+  "methodNotSupported": "Metoda nieobsługiwana",
+  "chainNotSupported": "Sieć nieobsługiwana",
+  "remove": "Usuń",
+  "showMore": "Pokaż więcej",
+  "showLess": "Pokaż mniej",
+  "welcomeToHTC": "Witaj w sklepie dApp HTC",
+  "signMessage": "Podpisz wiadomość",
+  "savedPwa": "Zapisane dApp",
+  "noDappsSaved": "Brak zapisanych dApp",
+  "dappsReadyToUpdate": "dApp gotowe do aktualizacji",
+  "updateYourDapps": "Aby korzystać z najnowszych funkcji, zaktualizuj swoje dApp",
+  "youHave": "Posiadasz",
+  "webDapps": "dApp sieci Web",
+  "manageDapps": "Zarządzaj dApp",
+  "installedDapps": "Zainstalowane dApp",
+  "pwas": "PWAs",
+  "installedDappWithNumber": "Zainstalowane dApp ({number})",
+  "@installedDappWithNumber": {
+    "placeholders": {
+      "number": {
+        "type": "int"
+      }
+    }
+  },
+  "savedPwasWithNumber": "Zapisane PWA dApp ({number})",
+  "@savedPwasWithNumber": {
+    "placeholders": {
+      "number": {
+        "type": "int"
+      }
+    }
+  },
+  "noDappsInstalled": "Brak zainstalowanych dApp",
+  "youWillReceivetwo": "Otrzymasz dwa żądania. Jeden dotyczy połączenia z portfelem, drugi dotyczy podpisania wiadomości. Podpisanie nie wiąże się z opłatami za transakcje.",
+  "confirmThatYouAreOwner": "Powróć do portfela i podpisz wiadomość, aby potwierdzić, że jesteś właścicielem tego portfela",
+  "connectUsignAnyWalletConnect": "Połącz dowolny portfel obsługujący Wallet Connect",
+  "goBackToWallet": "Wróć do portfela i podpisz wiadomość",
+  "approveRequest": "Zatwierdź żądanie",
+  "approveRequestSubtitle": "Po sprawdzeniu treści żądania otwórz portfel i podpisz je",
+  "ohno": "O nie!",
   "chainNotSupportedPopup": "Wybrany łańcuch nie jest obecnie obsługiwany.",
   "seeInstalledDapps": "Zobacz zainstalowane dAppy.",
   "deepDive": "Zanurz się w świat Web3.",
@@ -127,5 +127,9 @@
   "writeAboutTheApp": "Napisz o dApp.\n\nUważam, że aplikacja jest...",
   "shareReview": "Udostępnij recenzję",
   "yourReview": "Twoja recenzja",
-  "editReview": "Edytuj recenzję"
+  "editReview": "Edytuj recenzję",
+  "otherReview": "Inna recenzja",
+  "downloadDappToReview": "Coś poszło nie tak, czy nie pobrałeś/otworzyłeś dApp przed napisaniem recenzji?",
+  "reviewPosted": "Recenzja opublikowana.",
+  "ratingsAndReviews": "Oceny i recenzje"
 }
